--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "apivirusfaccinbabiellower",
+  "name": "nyx_rat-back-end",
   "version": "1.0.0",
-  "description": "Uma API para um projeto de Virus",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "fastify": "^5.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.7.2",
-    "typescript": "^5.6.2"
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "fastify": "^5.0.0",
+    "prisma": "^5.20.0",
+    "socket.io": "^4.8.0"
   }
 }
