fix: fix database connection and ensure users are created successfully

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ PORT=3000
 FRONTEND_URL=http://localhost:3001  
 PYTHON_SERVER=http://localhost:5000
 JWT_SECRET=SUA_SENHA
+DATABASE_URL="mysql://root:@localhost:3306/Nyx"
