--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
+    "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
-    "prisma": "^5.20.0",
+    "mysql2": "^3.11.3",
     "socket.io": "^4.8.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prisma": "^5.20.0"
   }
 }
