--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "socket.io": "^4.8.0"
   },
