--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "fastify": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
-    "socket.io": "^4.8.0"
+    "socket.io": "^4.8.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
